Finished my project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Gregory L. Jordan Sr.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,15 +27,15 @@
 				<h2>Menu</h2>
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Ipsum veroeros</a></li>
-					<li><a href="generic.html">Tempus etiam</a></li>
-					<li><a href="generic.html">Consequat dolor</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="#technologies">Current Technologies</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#contact">Contact Information</a></li>
+					<!-- <li><a href="elements.html">Elements</a></li> -->
 				</ul>
-				<ul class="actions stacked">
+				<!-- <ul class="actions stacked">
 					<li><a href="#" class="button fit primary">Get Started</a></li>
 					<li><a href="#" class="button fit">Log In</a></li>
-				</ul>
+				</ul> -->
 			</nav>
 
 		<!-- Wrapper -->
@@ -44,43 +44,41 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper featured style1">
 						<div class="inner">
-							<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image"><img src="images/app.jpg" alt="" /></span>
 							<div class="content">
 								<header>
-									<h1>Reflex</h1>
-									<p>Lorem ipsum dolor sit magna consectetur<br />
-									adipiscing elit. Duis dapibus rutrum facilisis.<br />
-									Class aptent taciti sociosqu torquent.</p>
+									<h1>Gregory L. Jordan Sr.</h1>
+									<p>Welcome to my world.  I am a current Full Stack Development student at <a href="https://lambdaschool.com/">Lambda School</a>  and an aspiring Software Engineer<br />
+									Learning new technologies is a part of skills.</p>
 								</header>
 								<footer>
 									<ul class="actions">
-										<li><a href="#" class="button big">Get Started</a></li>
+										<li><a href="https://github.com/GregJordanSr" class="button big">Visit Me</a></li>
 									</ul>
 								</footer>
 							</div>
 						</div>
 					</section>
 
-				<!-- One -->
+				<!-- Current Technologies -->
 					<section class="wrapper style2 special">
 						<div class="inner">
 							<header>
-								<h2>Ipsum malesuada</h2>
-								<p>Rutrum facilisis. Class aptent taciti sociosqu<br />
-								litora torquent et conubia etiam nostra.</p>
+								<h2 id="technologies">Current Technologies</h2>
+								<p>I have a passion for learning new technologies, for professional and personal purposes.</p>
 							</header>
 							<ul class="icons major style2">
-								<li><span class="icon fa-code"><span class="label">Lorem</span></span></li><li>
-								<span class="icon fa-cog"><span class="label">Ipsum</span></span></li><li>
-								<span class="icon fa-diamond"><span class="label">Dolor</span></span></li><li>
-								<span class="icon fa-camera-retro"><span class="label">Feugiat</span></span></li><li>
-								<span class="icon fa-briefcase"><span class="label">Tempus</span></span></li>
+								<li><span class="icon fa-css3"><span class="label">CSS3</span></span></li><li>
+								<span class="icon fa-code-fork"><span class="label">LESS</span></span></li><li>
+								<span class="icon fa-html5"><span class="label">HTML5</span></span></li><li>
+								<span class="icon fab fa-js"><span class="label">Feugiat</span></span></li><li>
+								<span class="icon fab fa-js"><span class="label">Tempus</span></span></li>
 							</ul>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos malesuada fames ac turpis egestas. In non lorem amet. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique eu nibh.</p>
-							<footer>
+							<p>Currently I am learning about Semantic HTML and CSS fundamentals, Flex box, Responsive design, LESS and SASS.</p>
+							<!-- <footer>
 								<ul class="actions special">
 									<li><a href="#" class="button">Details</a></li>
-								</ul>
+								</ul> -->
 							</footer>
 						</div>
 					</section>
@@ -89,63 +87,63 @@
 					<section class="wrapper style1 special">
 						<div class="inner">
 							<header>
-								<h2>Duis torquent</h2>
-								<p>Rutrum facilisis. Class aptent taciti sociosqu<br />
-								litora torquent et conubia etiam nostra.</p>
+								<h2 id="projects">Projects</h2>
+								<p>I have a brief presentation of my beginning projects.<br />
+								Please feel free to spend sometime browsing through them.</p>
 							</header>
 							<section class="spotlight">
-								<span class="image"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image"><img src="images/home.png" alt="" /></span>
 								<div class="content">
 									<header>
-										<h3>Aliquam veroeros</h3>
+										<h3>Sprint Challenge Multi-website</h3>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
+									<p>This project is a reflection of what I learned after my first week of classes.<br> This site was created with HTML and Flex box.</p><br>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Details</a></li>
+											<li><a href="https://github.com/GregJordanSr/Sprint-Challenge--User-Interface" class="button">Details</a></li>
 										</ul>
 									</footer>
 								</div>
 							</section>
 							<section class="spotlight">
-								<span class="image"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image"><img src="images/desktop.jpg" alt="" /></span>
 								<div class="content">
 									<header>
-										<h3>Nostra adpiscing</h3>
+										<h3>Great Ideas Website</h3>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
+									<p>This project was the very first website that I created.  It was created with HTML5 and fundamental CSS.  I am very proud of this website because it proved to myself that I can learn web design.</p><br>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Details</a></li>
+											<li><a href="https://github.com/GregJordanSr/UI-III-Flexbox" class="button">Details</a></li>
 										</ul>
 									</footer>
 								</div>
 							</section>
 							<section class="spotlight">
-								<span class="image"><img src="images/pic04.jpg" alt="" /></span>
+								<span class="image"><img src="images/tablet-view.png" alt="" /></span>
 								<div class="content">
 									<header>
-										<h3>Tempus litoria</h3>
+										<h3>Responsive Design website</h3>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
+									<p>This project is the first responsive design website that I have every completed and also makes a marker in the progression of my knowledge growth.  It was created with HTML5, Flex Box, and using media queries.</p><br>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Details</a></li>
+											<li><a href="https://github.com/GregJordanSr/responsive-web-design-I" class="button">Details</a></li>
 										</ul>
 									</footer>
 								</div>
 							</section>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos malesuada fames ac turpis egestas. In non lorem amet. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique eu nibh.</p>
+							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos malesuada fames ac turpis egestas. In non lorem amet. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique eu nibh.</p>
 							<footer>
 								<ul class="actions special">
 									<li><a href="#" class="button">Details</a></li>
 								</ul>
-							</footer>
+							</footer> -->
 						</div>
 					</section>
 
 				<!-- Three -->
-					<section class="wrapper style3 special">
+					<!-- <section class="wrapper style3 special">
 						<div class="inner">
 							<header>
 								<h2>Amet ullamcorper</h2>
@@ -158,25 +156,25 @@
 									<li><a href="#" class="button big">Get Started</a></li>
 								</ul>
 							</footer>
-						</div>
-					</section>
+						</div> -->
+					<!-- </section> -->
 
 				<!-- Footer -->
 					<section id="footer" class="wrapper split style2">
 						<div class="inner">
 							<section>
 								<header>
-									<h3>Magna lorem ipsum</h3>
+									<h3 id="contact">Contact Information</h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
+								<p>Reach out to me on social media for business inquires and general questions.</p>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.twitter.com/abdul_qadir41" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.instagram.com/abdul_qadir41" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<!-- <li><a href="#" class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></a></li> -->
+									<li><a href="https://github.com/GregJordanSr" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
-							<section>
+							<!-- <section>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -187,7 +185,7 @@
 										<li><input type="submit" value="Send Message" /></li>
 									</ul>
 								</form>
-							</section>
+							</section> -->
 						</div>
 						<div class="copyright">
 							<p>&copy; Untitled. All rights reserved. Lorem ipsum dolor sit amet nullam.</p>
